unpackaged/main/default/objects/n2de__Team_shift_planner__c/n2de__Team_shift_planner__c.object-meta.xml
<CustomObject>
    <description>Shift planner object that relates to a single team</description>
    <label>Team shift planner</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team shift planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>