unpackaged/main/default/objects/n2de__Team_shift_planner__c/fields/n2de__Is_clone_in_progress__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_clone_in_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Shift Planner currently being cloned?</inlineHelpText>
    <label>Clone in progress?</label>
    <type>Checkbox</type>
</CustomField>