unpackaged/main/default/objects/n2de__Team_shift_planner__c/fields/n2de__Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team that the team shift planner is related to</description>
    <label>Team</label>
    <referenceTo>n2de__Team__c</referenceTo>
    <relationshipLabel>Team shift planners</relationshipLabel>
    <relationshipName>Team_shift_planners</relationshipName>
    <type>Lookup</type>
</CustomField>